# iris

./: .gitignore  .mailmap  .prettierignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  MAINTAINERS.txt  Pipfile  README.md  SECURITY.md  SPRINT.md  SPRINT.txt  bun.lockb  new_page.rs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  dependency_request.yml
.github/workflows/: publish.yml
docs/: MAINTAINERS.md  README.md  ai-features.md  create-a-feature.md  design.md  frontend-guidelines.md  new_page.md  scrum.md  tauri-commands.md
docs/code-quality/: conventions.md
docs/design/: README.md  accessibility.md  animations.md  core-feature.md  create-a-feature.md  design.md  palliaview.md
docs/maintenance/: qa.md  sprint.md
docs/team/: upgrade-tauri-v2.md  using-pull-requests.md
docs/tools/: README.md  contacts.md
docs/tools/ai/: ai-features.md
docs/tools/settings/: keyboard-shortcutsa.md
docs/tutorials/: coverage.md  creating_gobjects.md
gtk-camera/: Cargo.toml  README.md
gtk-camera/src/: main.rs
log-view-tab/: package-lock.json  package.json
log-view-tab/src/: LogTab.tsx
scripts/: clear.js  pre-install.sh  reset.js
src/: App.tsx  Database.py  Medications.py  User.py  database.rs  helper.ts  main.py  main.rs  medications.rs  schema.sql  types.ts  user.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  Release.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: care_instructions.rs  config.rs  database.rs  dev.rs  helpers.rs  lib.rs  main.rs  medications.rs  menu.rs  onboarding.rs  pro.rs  relay.rs  resources.rs  schema.sql  specs.rs  structs.rs  user.rs
src-tauri/src/ai/: commands.rs
src-tauri/src/call/: commands.rs  mod.rs
src-tauri/src/care_instructions/: commands.rs  helper.rs  mod.rs  schema.rs  schema.sql  structs.rs
src-tauri/src/contacts/: commands.rs  helper.rs  mod.rs  schema.rs  structs.rs
src-tauri/src/core/: commands.rs  config.rs  dev.rs  helpers.rs  menu.rs  mod.rs  onboarding.rs  relay.rs  schema.rs  schema.sql  structs.rs  user.rs
src-tauri/src/joystick/: events.rs
src-tauri/src/medications/: commands.rs  helper.rs  mod.rs  schema.rs  schema.sql  structs.rs
src-tauri/src/onboarding/: helpers.rs
src-tauri/src/pro/: commands.rs  helper.rs  mod.rs  schema.rs  schema.sql  structs.rs
src-tauri/src/resources/: commands.rs  helper.rs  mod.rs  schema.rs  schema.sql  structs.rs
src-tauri/src/settings/: commands.rs  config.rs  mod.rs  structs.rs
src-tauri/src/updater/: commands.rs
src-tauri/tests/: testing.sql
src/GObjects/: demo.py
src/app/: Header.tsx  HubApps.ts  LogTab.css  LogTab.tsx  Onboarding.tsx  globals.css  layout.tsx  page.module.css  page.tsx
src/app/_types/: hub.ts  settings.ts
src/app/_utils/: hub.ts  parsing.ts
src/app/accessibility/: keyboard_nav.tsx
src/app/call/: _helper.ts  helper.ts  page.module.css  page.tsx
src/app/care-instructions/: page.module.css  page.tsx
src/app/care_instructions/: AllCareInstructions.module.css  AllCareInstructions.tsx  all_instructions.tsx  page.module.css  page.tsx  types.ts
src/app/components/: BackButton.module.css  BackButton.tsx  Button.module.css  Button.tsx  Dialog.tsx  ForwardButton.module.css  ForwardButton.tsx  HubApp.module.css  HubApp.tsx  HubHeader.module.css  HubHeader.tsx  ToastDialog.tsx  UpcomingList.module.css  UpcomingList.tsx  UpcomingMed.module.css  UpcomingMed.tsx
src/app/contacts/: page.module.css  page.tsx  types.ts
src/app/core/: HubApps.ts  HubTools.ts  Onboarding.module.css  Onboarding.tsx  helper.ts  types.ts
src/components/: BackButton.module.css  BackButton.tsx  Button.module.css  Button.tsx  Dialog.module.css  Dialog.tsx  ForwardButton.module.css  ForwardButton.tsx  HubHeader.module.css  HubHeader.tsx  HubToolButton.module.css  HubToolButton.tsx  Layout.module.css  Layout.tsx  ToastDialog.css  useKeyPress.tsx
src/types/: care-instructions.ts  contacts.ts  hub.ts  medications.ts  pro.ts  resources.ts  settings.ts
src/utils/: care_instructions.ts  contacts.ts  database.ts  folders.ts  hub.ts  medications.ts  onboarding.ts  parsing.ts  pro.ts  resources.ts  settings.ts  stamp.ts  truncate.ts
tests/: test_database.py  test_database.rs  test_main.rs  test_medications.py  test_medications.rs
(+188 files in other folders)
