[package]
name = "iris"
version = "0.0.0"
description = "Iris, the at-home hospice management system by the Ojos Project."
homepage = "https://ojosproject.org/iris/"
documentation = "https://ojosproject.org/docs/iris/"
authors = ["Ojos Project"]
license = "GPL-3.0-only"
repository = "https://github.com/ojosproject/iris/"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = {version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
itertools = "0.13.0"
reqwest = "0.11.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
