[package]
name = "iris"
version = "0.0.0"
description = "Iris, the care management system by the Ojos Project."
homepage = "https://ojosproject.org/iris/"
documentation = "https://ojosproject.org/docs/iris/"
authors = ["Ojos Project"]
license = "GPL-3.0-only"
repository = "https://github.com/ojosproject/iris/"
edition = "2021"
rust-version = "1.60"

[lib]
name = "iris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.0", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-os = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-updater = "2.9.0"
